# GDMusicKit

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  chorddefs.json  foo  scaledefs.json
.devcontainer/: Dockerfile
app/: CMakeLists.txt  build.sh
app/src/: Log.cpp  Log.hpp  Logging.cpp  Logging.hpp  loggingfrobs.cpp  main.cpp
doc/: DoesThisWork.md
future/: MacMIDI.cpp  MacMIDI.hpp  TimedMetaMessage.hpp
lib/: .clang-format  .clang-format-10  .gitignore  CMakeLists.txt  Installation.cmake.in  README.md  status.md
lib/cmake/: BuildModules.cmake  GDMusicKitConfig.cmake.in  GoogleTest-CMakeLists.txt.in  PackageConfig.cmake  Static  StaticAnalysis.cmake  clang-cxx-dev-tools.cmake  cmake_uninstall.cmake
lib/doc/: CMakeLists.txt  Doxyfile copy.in  Doxyfile.in  main.md
lib/examples/: CMakeLists.txt  NoteExample.cpp
lib/include/: Logging.hpp
lib/include/gdmusickit/: Interval.hpp  MIDISequence.hpp  MIDITrack.hpp  MacMIDI.hpp  MusicFrequency.hpp  Note.hpp  NoteSequence.hpp  Pitch.hpp  PitchFactory.hpp  PitchStringFormat.hpp  PitchStringParser.hpp  Scale.hpp  TimedMetaMessage.hpp  gdmusickit.h  timing.hpp
lib/scripts/: Calling.cpp  Functor.cpp  install.output.txt  uninstall.sh
lib/src/: Fly.cpp  Interval.cpp  Logging.cpp  MIDISequence.cpp  MIDITrack.cpp  MacMIDI.cpp  MusicFrequency.cpp  Note.cpp  NoteSequence.cpp  Pitch.cpp  Pitch.hppx  PitchFactory.cpp  PitchStringFormat.cpp  PitchStringParser.cpp  Scale.cpp  StringFrobs.cpp  TimedMetaMessage.cpp  fix.sh  runcheck.sh  runlint.sh  runtidy.sh  scratchpad.txt
lib/test/: CMakeLists.txt  GoogleTestConfig cmake-bin.in  GoogleTestConfig.in
lib/test/src/: Global_test.cpp  Interval_test.cpp  MIDISequence_test.cpp  MIDITrack_test.cpp  MusicFrequency_test.cpp  NoteSequence_test.cpp  Note_test.cpp  PitchFactory_test.cpp  PitchStringFormat_test.cpp  PitchStringParser_test.cpp  Pitch_test.cpp  Scale_test.cpp  main.cpp
scripts/js/: chorddefs.json  chords.js  rj.js  scaledefs.json  scalemap.js  scales.js
